k8s/base/mcp/imagegen-mcp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: imagegen-mcp
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: imagegen-mcp
    app.kubernetes.io/name: imagegen-mcp
    app.kubernetes.io/part-of: simon-casino-tools
    app.openshift.io/runtime: python
    component: mcp
    kagenti.io/transport: streamable_http
    kagenti.io/type: tool
    protocol.kagenti.io/mcp: ''
  name: imagegen-mcp
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: imagegen-mcp
  template:
    metadata:
      labels:
        app: imagegen-mcp
        app.kubernetes.io/component: backend
        app.kubernetes.io/instance: imagegen-mcp
        app.kubernetes.io/name: imagegen-mcp
        app.kubernetes.io/part-of: simon-casino-tools
        app.openshift.io/runtime: python
        component: mcp
        kagenti.io/transport: streamable_http
        kagenti.io/type: tool
        kagenti.io/inject: disabled
        protocol.kagenti.io/mcp: ''
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: marketing-assistant-config
        - secretRef:
            name: marketing-assistant-secrets
        image: quay.io/rh-ee-dayeo/marketing-assistant:imagegen-mcp
        imagePullPolicy: Always
        name: mcp
        ports:
        - containerPort: 8091
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: imagegen-mcp
spec:
  ports:
  - port: 8091
    targetPort: 8091
  selector:
    app: imagegen-mcp
---
# Kagenti currently hardcode this
# https://github.com/kagenti/kagenti/blob/main/kagenti/ui-v2/src/pages/ToolDetailPage.tsx#L292-L299  
apiVersion: v1
kind: Service
metadata:
  name: imagegen-mcp-mcp 
spec:
  ports:
  - port: 8091
    targetPort: 8091
  selector:
    app: imagegen-mcp
