k8s/base/mcp/mongodb-mcp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: '["mongodb"]'
  labels:
    app: mongodb-mcp
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: mongodb-mcp
    app.kubernetes.io/name: mongodb-mcp
    app.kubernetes.io/part-of: simon-casino-tools
    app.openshift.io/runtime: python
    component: mcp
    kagenti.io/transport: streamable_http
    kagenti.io/type: tool
    protocol.kagenti.io/mcp: ''
  name: mongodb-mcp
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-mcp
  template:
    metadata:
      labels:
        app: mongodb-mcp
        app.kubernetes.io/component: backend
        app.kubernetes.io/instance: mongodb-mcp
        app.kubernetes.io/name: mongodb-mcp
        app.kubernetes.io/part-of: simon-casino-tools
        app.openshift.io/runtime: python
        component: mcp
        kagenti.io/transport: streamable_http
        kagenti.io/type: tool
        kagenti.io/inject: disabled
        protocol.kagenti.io/mcp: ''
    spec:
      containers:
      - env:
        - name: PORT
          value: "8095"
        image: quay.io/rh-ee-dayeo/marketing-assistant:mongodb-mcp
        imagePullPolicy: Always
        name: mcp
        ports:
        - containerPort: 8095
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-mcp
spec:
  ports:
  - port: 8090
    targetPort: 8095
  selector:
    app: mongodb-mcp
---
# Kagenti currently hardcode this
# https://github.com/kagenti/kagenti/blob/main/kagenti/ui-v2/src/pages/ToolDetailPage.tsx#L292-L299  
apiVersion: v1
kind: Service
metadata:
  name: mongodb-mcp-mcp
spec:
  ports:
  - port: 8000
    targetPort: 8095
  selector:
    app: mongodb-mcp
